# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-21 18:01:53 GMT	John Goerzen <jgoerzen@complete.org>	patch-128

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-128


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 17:21:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-127

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-127


    modified files:
     ChangeLog TODO libsrc/MissingH/Network/FTP/ParserServer.hs
     libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 16:37:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-126

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-126


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/ParserServer.hs


2004-12-21 16:24:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-125

    Summary:
      Compilation fixes
    Revision:
      missingh--head--0.7--patch-125


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/ParserServer.hs
     libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 16:17:59 GMT	John Goerzen <jgoerzen@complete.org>	patch-124

    Summary:
      Setting up infrastructure for FTP server
    Revision:
      missingh--head--0.7--patch-124


    new files:
     libsrc/MissingH/Network/FTP/ParserServer.hs

    modified files:
     ChangeLog debian/changelog
     libsrc/MissingH/Network/FTP/Client.hs
     libsrc/MissingH/Network/FTP/ParserClient.hs
     libsrc/MissingH/Network/FTP/Server.hs

    renamed files:
     libsrc/MissingH/Network/FTP/Parser.hs
       ==> libsrc/MissingH/Network/FTP/ParserClient.hs


2004-12-21 16:11:44 GMT	John Goerzen <jgoerzen@complete.org>	patch-123

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-123


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs